# KengaIDE

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build-release.yml
crates/agent_tools/: Cargo.toml
crates/agent_tools/src/: executor.rs  lib.rs  types.rs
crates/ai_providers/: Cargo.toml
crates/ai_providers/src/: api_provider.rs  lib.rs  traits.rs
crates/ai_runtime/: Cargo.toml
crates/ai_runtime/src/: agent.rs  controller.rs  error.rs  lib.rs  orchestration.rs  prompt_builder.rs  provider_selector.rs  runtime.rs  streaming.rs
crates/backend_core/: Cargo.toml
crates/backend_core/src/: audit.rs  command_router.rs  fs.rs  git.rs  lib.rs  logs.rs  patch.rs  project.rs  workspace.rs
crates/context_manager/: Cargo.toml
crates/context_manager/src/: context.rs  lib.rs
crates/gigachat_provider/: Cargo.toml
crates/gigachat_provider/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  provider.rs
crates/local_provider/: BUILD.md  Cargo.toml
crates/local_provider/src/: config.rs  error.rs  hardware_detect.rs  inference.rs  lib.rs  model_manager.rs  provider.rs  tokenizer.rs
crates/mcp_provider/: Cargo.toml
crates/mcp_provider/src/: client.rs  config.rs  context.rs  error.rs  lib.rs  tools.rs  types.rs
crates/model_manager/: Cargo.toml
crates/model_manager/src/: lib.rs  manager.rs
docs/: AI_STATUS_AND_ISSUES.md  BLOCK_14_SPEC.md  BLOCK_18_SPEC.md  BLOCK_19_SPEC.md  BLOCK_20_SPEC.md  BLOCK_E5_SPEC.md  BLOCK_E6_SPEC.md  BLOCK_I1_AUDIT_LOGGING_SPEC.md  BLOCK_I1_CURSOR.md  BLOCK_I1_ENTERPRISE_DEPLOY_SPEC.md  BLOCK_I1_INSTALLER_SPEC.md  BLOCK_I1_LICENSING_SPEC.md  BLOCK_I1_SECURITY_SPEC.md  BLOCK_I1_SPEC.md  BLOCK_I1_UPDATE_SYSTEM_SPEC.md  BLOCK_I1_UX.md  BLOCK_I2_MENU_SPEC.md  BLOCK_I2_POLICY_SPEC.md  BLOCK_I2_THEME_SPEC.md  BLOCK_I2_UX_POLISH_SPEC.md  BLOCK_I2_UX_USABILITY_SPEC.md  BLOCK_I3_PLUGIN_API_SPEC.md  BLOCK_I3_PLUGIN_SPEC.md  BUILD_APPIMAGE.md  BUILD_VERIFICATION.md  INSTALLER_QUICKSTART.md  ROADMAP.md  SIGNING_WINDOWS.md  SPECS_INDEX.md  TROUBLESHOOTING.md
scripts/: create-dev-cert.ps1  run-built.js  trigger-build-release.ps1
src/: App.tsx  constants.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_config.rs  commands.rs  lib.rs  main.rs  state.rs
src/components/: FileTree.tsx  Modal.tsx
src/lib/: invoke.ts
