[package]
name = "agent_tools"
version = "0.1.0"
edition = "2021"
description = "IDE Agent Tools: create_file, read_file, list_files, update_file"

[dependencies]
backend_core = { path = "../backend_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
