[package]
name = "backend_core"
version = "0.1.0"
edition = "2021"
description = "Backend Core: FS, Project, Git, Command Router, IPC"

[dependencies]
dirs = "5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.18"
walkdir = "2"
