[package]
name = "gigachat_provider"
version = "0.1.0"
edition = "2021"
description = "GigaChat API provider (OAuth2, GigaChat-Ultra)"

[dependencies]
ai_providers = { path = "../ai_providers" }
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
