[package]
name = "mcp_provider"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) — контекст и инструменты для агента"

[dependencies]
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "test-util"] }
tracing = "0.1"
